chore: 🔧 Update run validator guide