@@ -7,11 +7,12 @@ sidebar_position: 1
 
 **Requirements:**
 
-- **CPU**: 1 vCPU
-- **Memory**: 1 GB RAM
-- **Disk**: 25 GB HDD or higher
-- **Open TCP Ports**: 8231, 8085
-- **Open UDP Port**: 7621
+- **CPU**: 2 vCPU
+- **Memory**: 4 GB RAM  
+- **Disk**: 100 GB HDD or higher
+- **Bandwidth**: 400Mbps download or higher. 800Mbps upload or higher
+- **Open TCP Ports**: 8231, 8085, 9864
+- **Open UDP Ports**: 7621
 
 ### Setup on Ubuntu Server:
 
@@ -24,50 +25,89 @@ sudo apt update
 2. **Install Java**:
 
 ```shell
-apt install openjdk-19-jre-headless
+sudo apt install default-jdk
 ```
 
-3. **Install the validator node software and config file**:
+3. **Open Required Ports**:
+
+**For UFW (Uncomplicated Firewall):**
 
 ```shell
-wget https://github.com/pwrlabs/PWR-Validator-Node/raw/main/validator.jar
-wget https://github.com/pwrlabs/PWR-Validator-Node/raw/main/config.json
+sudo ufw allow 8231/tcp
+sudo ufw allow 8085/tcp
+sudo ufw allow 9864/tcp
+sudo ufw allow 7621/udp
+sudo ufw reload
 ```
 
-4. **Set Up your Password**:
+**For iptables:**
+
+```bash
+sudo iptables -A INPUT -p tcp --dport 8231 -j ACCEPT
+sudo iptables -A INPUT -p tcp --dport 8085 -j ACCEPT
+sudo iptables -A INPUT -p tcp --dport 9864 -j ACCEPT
+sudo iptables -A INPUT -p udp --dport 7621 -j ACCEPT
+sudo netfilter-persistent save
+```
+
+> **Note**: If you're using a cloud provider, you may also need to configure the ports in their firewall/security group settings.
+
+4. **Install the validator node software and config file**:
 
 ```shell
-sudo nano password
+wget https://github.com/pwrlabs/PWR-Validator/releases/download/15.63.9/validator.jar
+wget https://github.com/pwrlabs/PWR-Validator/raw/refs/heads/main/config.json
 ```
 
-- Enter your desired password.
-- Press `Ctrl + x` to close.
-- Press `Y` to confirm saving the password.
-
-5. **Run the Node: Replace `<YOUR_SERVER_IP>` with your server's actual IP**:
+5. **Setup your password**:
 
 ```shell
-sudo java -jar validator.jar password <YOUR_SERVER_IP> --compression-level 0
+echo "your password here" > password
 ```
 
-PWR Chain is the first chain that supports block compression. --compression-level sets the level of compression you want your node to use. Compression level varies from 0 - 9. 0 disbales compression. 9 sets it to maximum.
+6. **Run the Node**:
 
-- Upon initialization, the node will generate a wallet, store it locally, and display an address in the format:
-  
-  ```js
-  My address: 0xf4b2f12afa634c206bdf5f0dd6dd90f024ad62b7
-  ```
+Replace `<YOUR_SERVER_IP>` with your server's actual IP.
 
-6. **Become a Validator Node**:
+```shell
+nohup sudo java --enable-native-access=ALL-UNNAMED -jar validator.jar --ip <your nodes ip here> --password password &
+```
+
+> **NOTE:** Make sure ports 8085 and 8231 are open for TCP.
+
+7. **Get Your Address**
+
+```shell
+java -jar validator.jar get-address password
+```
+
+8. **Become a Validator Node**
 
 - Initially, your node will synchronize with the blockchain but will not assume validator responsibilities until it possesses staked PWR Coins.
-- To obtain sufficient PWR Coins for staking, [apply to become a testnet validator on our Discord server](https://discord.gg/DJkcuy9SAg). Once approved, you can use our discord bot to claim 100k PWR to stake.
+- To obtain sufficient PWR Coins for staking, [apply to become a testnet validator](https://docs.google.com/forms/d/1ImUgk8JaKCwJR-7xiBNaA8-mb604CYdSKJfMRHacA60). Once approved, you can use our discord bot to claim 100k PWR to stake.
 - After claiming your coins, your node will initiate a transaction to enlist as a validator.
 
-7. Running in the Background: If you wish to run the node in the background, ensuring it remains active after closing the terminal, utilize the `nohup` command:
+9. **Checking your nodes logs**
 
-```shell
-nohup sudo java -jar validator.jar password <YOUR_SERVER_IP> --compression-level 0 &
+If you wish to check your nodes log, you can do so using the following command:
+
+```bash
+tail -n 1000 nohup.out -f
 ```
+
+### Importing an Existing Wallet
+
+To import your old wallet using this update:
+
+```bash
+java -jar validator.jar import-seed-phrase <password file here> <seed phrase here>
+```
+
+**Example:**
+
+```bash
+java -jar validator.jar import-seed-phrase password public neither spider scare diagram knife fragile road kit guess crucial bachelor
+```
+
 
 Congratulations, you've now set up and run a PWR Chain validator node!
